# bike-alert

./: .gitignore  README.md  main.py  pyproject.toml
bike_alert/: __init__.py  app.py  config.py  database.py  frame_size.py  models.py
bike_alert/exporters/: __init__.py  excel_exporter.py
bike_alert/scrapers/: __init__.py  base.py  bike_discount_scraper.py  example_scraper.py  fake_scraper.py  velomarkt_scraper.py
config/: search_criteria.toml
data/: bike_alert.sqlite3
exports/: bike_listings.xlsx
tests/: __init__.py  test_velomarkt_filtering.py
